# approximate

./: .gitignore  CMakeLists.txt  README.md  index.cfg  index.html
source/: approximate.cpp  approximate.hpp  cmesh.hpp  tool.cpp  tool.hpp  util.hpp
